--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,6 +28,9 @@ androidx-compose-hilt-navigation = "1.0.0"
 # Hilt
 hilt = "2.46.1"
 
+# Firebase
+firebase-bom = "32.1.1"
+
 # Gradle
 gradle-android = "8.0.2"
 
@@ -71,6 +74,10 @@ androidx-compose-test-uitooling = { group = "androidx.compose.ui", name = "ui-to
 # Hilt
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
+
+# Firebase
+firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase-bom" }
+firebase-analytics-ktx = { group = "com.google.firebase", name = "firebase-analytics-ktx" }
 
 # Gradle
 gradle-kotlin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
