--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,9 @@ androidx-lifecycle-runtime = "2.6.1"
 androidx-test-junit = "1.1.5"
 androidx-test-espresso = "3.5.1"
 
+# CameraX
+androidx-camera = "1.2.1"
+
 # Compose
 androidx-compose-bom = "2023.06.01"
 androidx-compose-compiler = "1.4.7"
@@ -55,6 +58,11 @@ androidx-lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-r
 androidx-test-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-junit" }
 androidx-test-espresso = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "androidx-test-espresso" }
 
+# CameraX
+androidx-camera-2 = { group = "androidx.camera", name = "camera-camera2", version.ref = "androidx-camera"}
+androidx-camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "androidx-camera" }
+androidx-camera-view = { group = "androidx.camera", name = "camera-view", version.ref = "androidx-camera" }
+
 # Compose
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "androidx-compose-bom" }
 androidx-compose-ui = { group = "androidx.compose.ui", name = "ui" }
@@ -90,6 +98,7 @@ gradle-hilt = { group = "com.google.dagger", name = "hilt-android-gradle-plugin"
 test = ["test-truth", "test-junit4", "test-turbine", "test-mockk", "test-kotlin-test"]
 androidx = ["androidx-core", "androidx-lifecycle-runtime"]
 androidx-test = ["androidx-test-junit", "androidx-test-espresso"]
+androidx-camera = ["androidx-camera-2", "androidx-camera-lifecycle", "androidx-camera-view"]
 androidx-compose = [
     "androidx-compose-ui",
     "androidx-compose-material3",
